tests/ui/duplicate-transparent.stderr
error: duplicate #[error(transparent)] attribute
 --> tests/ui/duplicate-transparent.rs:5:1
  |
3 | #[derive(Error, Debug)]
  |          ----- in this derive macro expansion
4 | #[error(transparent)]
5 | #[error(transparent)]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Error` (in Nightly builds, run with -Z macro-backtrace for more info)
